Semi-Working loanMedia UI
- Fixed `MediaType` and `Media` naming
- Updated `loanMedia` method to calculate `expectedReturnDate` and `expirationDate`
- Implemented UI for loaning media
- Implemented search form with dropdowns for `genre` and `mediaType`
- Added table displaying search results

--- a/springboot-master/springboot-master/src/main/resources/templates/index.html
+++ b/springboot-master/springboot-master/src/main/resources/templates/index.html
@@ -46,6 +46,10 @@
 
         <a href="admin/addUser" class="btn btn-primary">Add User</a>
         
+        
+        <a href="/loan" class="btn btn-primary">Loan Media</a>
+        
+        
         <a sec:authorize="isAuthenticated()" href="/logout" class="btn btn-primary">Logout</a>
 
         <br/><br/>
