updated UI returnMedia

--- a/springboot-master/springboot-master/src/main/resources/templates/index.html
+++ b/springboot-master/springboot-master/src/main/resources/templates/index.html
@@ -50,6 +50,9 @@
         <a href="/loan" class="btn btn-primary">Loan Media</a>
         
         
+        <a href="/returnMedia" class="btn btn-primary">Return Media</a>
+        
+        
         <a sec:authorize="isAuthenticated()" href="/logout" class="btn btn-primary">Logout</a>
 
         <br/><br/>
