--- a/springboot-master/springboot-master/src/main/resources/templates/returnMedia.html
+++ b/springboot-master/springboot-master/src/main/resources/templates/returnMedia.html
@@ -32,7 +32,7 @@
                     </thead>
                     <tbody>
                         <tr th:each="transaction : ${loans}">
-                            <td th:text="${transaction.media.name}">Media Name</td>
+                            <td th:text="${transaction.edition.media.name}">Media Name</td>
                             <td th:text="${#dates.format(transaction.expirationDate, 'yyyy-MM-dd')}">Due Date</td>
                             <td>
                                 <form th:action="@{/returnMedia}" method="post">
@@ -50,7 +50,7 @@
             </div>
 
             <div th:if="${loans == null}" class="alert alert-info">
-                <p>Unable to fetch loans at the moment.</p>
+                <p>No loans available to return.</p>
             </div>
         </div>
 
