--- a/springboot-master/springboot-master/src/main/resources/templates/loan.html
+++ b/springboot-master/springboot-master/src/main/resources/templates/loan.html
@@ -86,7 +86,7 @@
             </div>
             <input type="hidden" name="selectedGenre" th:value="${selectedGenre}">
             <input type="hidden" name="selectedType" th:value="${selectedType}">
-            <input type="hidden" id="selectedMedia" name="selectedMedia" value="">
+            <input type="hidden" id="selectedMedia" name="mediaId" value="">
             <button type="submit" class="btn btn-success mt-3">Submit</button>
         </form>
     </div>
