add physical location to loanSuccess page
assign sections to library in CLSR
adjust sections,library,shelf

--- a/springboot-master/springboot-master/src/main/resources/templates/loanSuccess.html
+++ b/springboot-master/springboot-master/src/main/resources/templates/loanSuccess.html
@@ -28,6 +28,15 @@
                 </ul>
             </li>
         </ul>
+
+        <h2>Physical Location</h2>
+			<ul>
+			    <li><strong>Library Name:</strong> <span th:text="${libraryName}"></span></li>
+			    <li><strong>Section:</strong> <span th:text="${sectionName}"></span></li>
+			    <li><strong>Shelf Number:</strong> <span th:text="${shelfNumber}"></span></li>
+			</ul>
+
+
         <a href="/" class="btn btn-primary">Back to Homepage</a>
     </main>
 </body>
