--- a/springboot-master/springboot-master/src/main/resources/templates/returnMedia.html
+++ b/springboot-master/springboot-master/src/main/resources/templates/returnMedia.html
@@ -19,9 +19,8 @@
 
         <!-- Display User Loans -->
         <div>
-            <h3>Your Current Loans</h3>
-
-            <div th:if="${loans != null && !loans.isEmpty()}">
+            <div th:if="${!loans.isEmpty()}">
+				<h3>Your Current Loans</h3>
                 <table class="table table-hover mt-4">
                     <thead>
                         <tr>
@@ -46,8 +45,8 @@
                 </table>
             </div>
 
-			<h3>Your Current Reservations</h3>
-			<div th:if="${reservations != null && !reservations.isEmpty()}">
+			<div th:if="${!reservations.isEmpty()}">
+				<h3>Your Current Reservations</h3>
 				<table class="table table-hover mt-4">
 					<thead>
 					<tr>
@@ -59,11 +58,12 @@
 					<tbody>
 					<tr th:each="transaction : ${reservations}">
 						<td th:text="${transaction.mediaName}">Media Name</td>
+						<td th:text="${transaction.startDate}">Start Date</td>
 						<td th:text="${transaction.expirationDate}">Due Date</td>
 						<td>
 							<form th:action="@{/cancelReservation}" method="post">
-								<input type="hidden" name="transactionId" th:value="${transaction.id}" />
-								<button type="submit" class="btn btn-danger">Cancel</button>
+								<input type="hidden" name="reservationId" th:value="${transaction.id}" />
+								<button type="submit" class="btn btn-danger">Cancel Reservation</button>
 							</form>
 						</td>
 					</tr>
@@ -71,9 +71,9 @@
 				</table>
 			</div>
 
-            <!-- Display Message If No Loans -->
-            <div th:if="${loans == null || loans.isEmpty()}" class="alert alert-info">
-                <p>No loans available to return.</p>
+            <!-- Display Message If No Loans and Reservations -->
+            <div th:if="${loans.isEmpty() && reservations.isEmpty()}" class="alert alert-info">
+                <p>No loans and reservations available to return.</p>
             </div>
         </div>
 
