update return media btn

--- a/springboot-master/springboot-master/src/main/resources/templates/returnMedia.html
+++ b/springboot-master/springboot-master/src/main/resources/templates/returnMedia.html
@@ -31,6 +31,7 @@
                     </thead>
                     <tbody>
                         <tr th:each="transaction : ${loans}">
+                            <!-- Only show ACTIVE loans (status != COMPLETED) -->
                             <td th:text="${transaction.edition.media.name}">Media Name</td>
                             <td th:text="${#dates.format(transaction.last_possible_return_date, 'yyyy-MM-dd')}">
                                 Due Date</td>
